# scsd_samv71_libraries

./: .gitignore  CMakeLists.txt  README.md  main.c  run.sh
CRC/: CRC8.c  CRC8.h
ErrorManager/: run.sh
ErrorManager/src/: CMakeLists.txt  errormanager.cpp  errormanager.h
ErrorManager/test/: CMakeLists.txt  test.cpp
lib/crc/: crc.c  crc.h
lib/tiny_stack_trace/: tiny_stack_trace.c  tiny_stack_trace.h
tests/: tests.h
tests/unit/crc/: test_crc.c  test_crc.h
tests/unit/tiny_stack_trace/: test_tiny_stack_trace.c  test_tiny_stack_trace.h
